Fix package-buttons alignment

--- a/src/public/less/components/package-header.less
+++ b/src/public/less/components/package-header.less
@@ -6,6 +6,11 @@
 	font-weight: 400;
 	-webkit-font-smoothing: antialiased;
 
+	.row:nth-child(1) > .col-sm-4 {
+		display: flex;
+		justify-content: flex-end;
+	}
+
 	.package-name {
 		display: inline-block;
 		font-weight: 600;
@@ -13,7 +18,6 @@
 		letter-spacing: .2px;
 		color: #111a2c;
 		margin: 0;
-		// color: @text-color;
 	}
 
 	h1.package-name {
@@ -28,7 +32,6 @@
 	}
 
 	.package-owner {
-		// color: @text-color;
 		display: inline-block;
 		vertical-align: middle;
 		font-size: 14px;
